--- a/friends.html
+++ b/friends.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WOONG's Friend</title>
+    <title>DOLCE's Friend</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,7 +19,7 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>11%</span>
+            <span>100%</span>
             <i class="fas fa-battery-full"></i>
             <!--battery icon-->
             <i class="fas fa-bolt"></i>
@@ -47,27 +47,71 @@
                 <h6 class="user-component__subtitle">I'm so lovely</h6>
             </div>
         </div>
-        <div class="user-component__column"></div>
     </div>
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="#">
-                    <i class="fas fa-user fa-2x"></i></a></li>
-            <li class="nav__btn">
-                <a class="nav__link" href="#">
-                    <span class="nav__notification">1</span>
-                    <i class="far fa-comments fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#">
-                <i class="fas fa-search fa-2x"></i></a></li>
-            <li class="nav__btn">
-                <a class="nav__link" href="#">
-                    <span class="nav__ellipsis__notification"></span>
-                <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
-        </ul>
-    </nav>
-    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
-    </script>
+    <div class="user-component__column"></div>
+    </div>
+    <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+            <span class="friends-screen__channel-name">Channel<i class="fas fa-chevron-up fa-xs"></i></span>
+        </div>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="dol-friend.jpg" class="user-component__avatar-sm">
+                <div class="user-component__text">
+                    <h4 class="user-component__title-sm">Dolce friend 01</h4>
+                    <h6 class="user-component__subtitle-sm">happy:)</h6>
+                </div>
+            </div>
+            <div class="user-component__subtitle-sm-icon">
+                <i class="fas fa-gift"></i>
+            </div>
+        </div>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="dol-friend-2.jpg" class="user-component__avatar-sm">
+                <div class="user-component__text">
+                    <h4 class="user-component__title-sm">Dolce friend 02</h4>
+                    <h6 class="user-component__subtitle-sm">I'm hungry</h6>
+                </div>
+            </div>
+            <div class="user-component__subtitle-sm-icon">
+                <i class="fas fa-gift"></i>
+            </div>
+        </div>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="dol-friend-3.jpg" class="user-component__avatar-sm">
+                <div class="user-component__text">
+                    <h4 class="user-component__title-sm">Dolce friend 03</h4>
+                    <h6 class="user-component__subtitle-sm">None</h6>
+                </div>
+            </div>
+            <div class="user-component__subtitle-sm-icon">
+                <i class="fas fa-gift"></i>
+            </div>
+        </div>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__btn">
+                    <a class="nav__link" href="friends.html">
+                        <i class="fas fa-user fa-2x"></i></a>
+                </li>
+                <li class="nav__btn">
+                    <a class="nav__link" href="chart.html">
+                        <span class="nav__notification">1</span>
+                        <i class="far fa-comments fa-2x"></i></a>
+                </li>
+                <li class="nav__btn"><a class="nav__link" href="find.html">
+                        <i class="fas fa-search fa-2x"></i></a></li>
+                <li class="nav__btn">
+                    <a class="nav__link" href="more.html">
+                        <span class="nav__ellipsis__notification"></span>
+                        <i class="fas fa-ellipsis-h fa-2x"></i></a>
+                </li>
+            </ul>
+        </nav>
+        <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
