end-for.dolce-talk-2020

--- a/chart.html
+++ b/chart.html
@@ -74,6 +74,13 @@
                 </li>
             </ul>
         </nav>
+
+        <div id="no-mobile">
+            <abbr title="Reduce the size of the screen">
+                <span>You screen is too big</span>
+            </abbr>
+        </div>
+
         <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
         </script>
 </body>
