--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         <input type="submit" value="Log in">
         <a href="#">Find Dolce's Account or Password</a>
     </form>
+
+    <div id="no-mobile">
+        <abbr title="Reduce the size of the screen">
+            <span>You screen is too big</span>
+        </abbr>
+    </div>
+
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
     </script>
 </body>
