--- a/message.html
+++ b/message.html
@@ -33,7 +33,7 @@
     <div class="setting-header">
         <div class="setting-header_column">
             <span class="setting-header_column-first">
-                <a href="more.html">
+                <a href="chart.html">
                     <i class="fas fa-chevron-left fa-lg"></i></span>
                 </a>
         </div>
@@ -45,6 +45,53 @@
             <span><i class="fas fa-bars fa-lg"></i></span>
         </div>
     </div>
+
+    <div class="message__time">
+        <span>Monday, June 30, 2020</span>
+    </div>
+
+    <main class="message-letterpress">
+        <div class="message-row">
+            <img src="user-01.jpg">
+            <div class="message-row__content">
+                <span class="message__author">HOST</span>
+                <div class="message__info">
+                    <span class="message__bubble">Welcom to Dolce world !</span>
+                    <span class="message__time-row">19:00</span>
+                </div>
+            </div>
+        </div>
+    
+        <div class="message-row messgae-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Hi !</span>
+                    <span class="message__time-row">19:01</span>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a message..."
+            style="padding-left:10px;">
+            <i class="far fa-grin"></i>
+            <button>
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
+    </form>
+
+    <div id="no-mobile">
+        <abbr title="Reduce the size of the screen">
+            <span>You screen is too big</span>
+        </abbr>
+    </div>
+
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
     </script>
