--- a/settings.html
+++ b/settings.html
@@ -90,6 +90,13 @@
         </ul>
     </nav>
     <!--nav bar-->
+
+    <div id="no-mobile">
+        <abbr title="Reduce the size of the screen">
+            <span>You screen is too big</span>
+        </abbr>
+    </div>
+
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous">
     </script>
 </body>
