add dog animation

--- a/friends.html
+++ b/friends.html
@@ -111,6 +111,10 @@
             </ul>
         </nav>
 
+        <div id="splash-screen">
+            <i class="fas fa-dog"></i>
+        </div>
+
         <div id="no-mobile">
             <abbr title="Reduce the size of the screen">
                 <span>You screen is too big</span>
