--- a/message.html
+++ b/message.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOLCE's message</title>
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="clock.js"></script>
 </head>
 
 <body id="message-screen">
@@ -17,7 +18,7 @@
             <!--wifi icon-->
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span id="js-clock">18:43</span>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
